# maintenance_service

./: .gitignore  pyproject.toml
backend/: requirements.txt
backend/app/api/: server.py
backend/app/core/: config.py  tasks.py
backend/app/db/: databases_logger.py  tasks.py
backend/app/models/: cleaning.py  core.py  evaluations.py  feed.py  offer.py  profile.py  token.py  users.py
backend/app/services/: authentication.py
backend/tests/: conftest.py  error_message_enum.py
backend/tests/cleanings/: conftest.py  test_cleanings.py
backend/tests/evaluations/: conftest.py  test_evaluations.py  test_evaluations_create.py  test_evaluations_get.py
backend/tests/feed/: conftest.py  test_feed.py
backend/tests/offers/: conftest.py  test_offers.py  test_offers_create.py  test_offers_delete.py  test_offers_get.py  test_offers_get_list.py  test_offers_update.py
backend/tests/profiles/: test_profiles.py  test_profiles_create.py  test_profiles_update.py  test_profiles_view.py
backend/tests/query_manager/: test_create_user_manager.py  test_get_cleaning.py
backend/tests/token/: test_token.py
backend/tests/users/: test_users.py  test_users_login.py  test_users_me.py
frontend/: package-lock.json  package.json
frontend/src/: index.js
frontend/src/components/: Test.js  index.js
frontend/src/hooks/: useCleaningFeed.js
frontend/src/redux/: auth.js  cleanings.js  feed.js  initialState.js  offers.js  rootReducer.js  store.js  ui.js
frontend/src/services/: apiClient.js
frontend/src/utils/: cleanings.js  errors.js  formValidator.js  format.js  urls.js  (+1 more)
(+56 files in other folders)
